# whatever

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2022-11-15-135657_steam-oauth-support/: down.sql  up.sql
src/: main.rs
src/middleware/: authentication.rs  mod.rs
src/middleware/redirect/: builder.rs  mod.rs  scheme.rs  service.rs
src/models/: mod.rs  schema.rs  user.rs
